--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,8 @@
     "version": "0.1",
     "window": {
         "icon": "imagenes/icono.png",
-        "toolbar": true,
-        "show": true,
+        "toolbar": false,
+        "show": false,
         "min_width": 750,
         "min_height": 500,
         "position": "center"
