--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "async": "~0.2.9",
     "q": "~0.9.7",
     "walk": "~2.2.1",
-    "jsdom": "~0.8.8"
+    "jsdom": "~0.8.8",
+    "jquery": "~1.8.3"
   },
   "devDependencies": {
     "q": "~0.9.7",
