--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: doc
 Priority: extra
 Maintainer: Hugo Ruscitti <hugoruscitti@gmail.com>
 Build-Depends: debhelper (>= 8.0.0), node-grunt-cli (>= 0.1.13), python-bs4, python-lxml,
-        wget (>= 1.16), npm (>= 1.4.21), node-async, node-q, nodejs-legacy, nodejs
+        wget (>= 1.16), npm (>= 1.4.21), nodejs-legacy, nodejs
 Standards-Version: 3.9.6
 Homepage: https://github.com/HuayraLinux/huayra-visor-manual
 
@@ -15,5 +15,3 @@ Description: Manual de huayra gnu-linux junto a un visor.
  El visor de manual huayra contiene todo el manual de usuario
  del sistema operativo junto a un visor que nos permite navegarlo
  y realizar búsquedas.
-
-
