--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: huayra-visor-manual
 Section: doc
 Priority: extra
 Maintainer: Hugo Ruscitti <hugoruscitti@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), node-grunt-cli (>= 0.1.13), python-bs4, python-lxml,
+Build-Depends: debhelper (>= 8.0.0), python-bs4, python-lxml,
         wget (>= 1.16), npm (>= 1.4.21), nodejs-legacy, nodejs, git
 Standards-Version: 3.9.6
 Homepage: https://github.com/HuayraLinux/huayra-visor-manual
